# rnd-platilka

./: .gitignore  pyproject.toml
src/platilka/: __init__.py  __main__.py  api.py  main.py  models.py  more_rec_results.json  recommendation_results.json  settings.py  sutochno_service.py
src/platilka/api/: app.py
src/platilka/api/endpoints/: product_recommendations.py
src/platilka/core/: logging.py  settings.py
src/platilka/models/: product.py  search.py
src/platilka/services/: broswer_service.py  product_service.py  search_service.py
src/platilka/utils/: prompts.py
